modifications on pages

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -2,7 +2,7 @@
 <html>
   <title>Favorite Place</title>
   <head>
-    <link href="css/styles-places.css" rel="stylesheet" type="text/css">
+    <link href="css/styles-main.css" rel="stylesheet" type="text/css">
     <h1>Favorite Places</h1>
   </head>
   <body>
