added 2 new sub-pages

--- a/resort-page/index.html
+++ b/resort-page/index.html
@@ -9,10 +9,10 @@
   </br>
   <body>
     <p>
-      <a href="">Acommodations</a> |
-      <a href="">Acommodations</a> |
-      <a href="">Acommodations</a> |
-      <a href="">Acommodations</a>
+      <a href="accommodation.html">Acommodations</a> |
+      <a href="http://www.bahamas.com/things-to-do">Activities</a> |
+      <a href="http://www.gofox.com/destination/bahamas-the/">Travel</a> |
+      <a href="pictures.html">Pictures</a>
     </p>
 
   </body>
