--- a/resort-page/index.html
+++ b/resort-page/index.html
@@ -2,9 +2,11 @@
 <html>
   <title>Resort</title>
   <head>
-    <link href="" rel="stylesheet" type="text/css">
+    <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Super Bright</h1>
-    <img src ="http://cl.jroo.me/z3/Y/2/C/d/a.aaa-The-Bahamas.jpg" alt="private resort">
+    <p>
+      <img src ="http://cl.jroo.me/z3/Y/2/C/d/a.aaa-The-Bahamas.jpg" alt="private resort">
+    </p>
   </head>
   </br>
   <body>
