--- a/resort-page/index.html
+++ b/resort-page/index.html
@@ -4,9 +4,11 @@
   <head>
     <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Super Bright</h1>
-    <p><img src ="http://cl.jroo.me/z3/Y/2/C/d/a.aaa-The-Bahamas.jpg" alt="private resort"></p>
+    <p><img src ="http://cl.jroo.me/z3/Y/2/C/d/a.aaa-The-Bahamas.jpg" border="3"  alt="private resort"></p>
+
   </head>
-  </br>
+  <br />
+
   <body>
     <p>
       <a href="accommodation.html">Acommodations</a> |
@@ -14,7 +16,7 @@
       <a href="http://www.gofox.com/destination/bahamas-the/">Travel</a> |
       <a href="pictures.html">Pictures</a>
     </p>
-
+<body bgcolor= "#a1ead2">
   </body>
 
 
