--- a/resort-page/accommodation.html
+++ b/resort-page/accommodation.html
@@ -2,16 +2,16 @@
 <html>
   <title>Accommodation</title>
   <head>
-    <link href="" rel="stylesheet" type="text/css">
-    <h1>Super Bright</h1>
-    <img src ="https://s-media-cache-ak0.pinimg.com/736x/2e/f9/98/2ef99872c3375918428938d0b66afad1.jpg" alt="private room">
+    <link href="resort-style.css" rel="stylesheet" type="text/css">
+    <h1>Accommodation</h1>
   </head>
   </br>
   <body>
+    <center><img src ="https://s-media-cache-ak0.pinimg.com/736x/2e/f9/98/2ef99872c3375918428938d0b66afad1.jpg" alt="private room"></center>
     <p>
-      <a href="accommodation.html">Acommodations</a> |
-      
-    </p>
+      | <a href="index.html">Home</a> |
 
+    </p>
+    <body bgcolor="#9ce5d8"
   </body>
 </html>
