added changes to gh-resort3

--- a/resort-page/index.html
+++ b/resort-page/index.html
@@ -16,19 +16,6 @@
       <a href="http://www.gofox.com/destination/bahamas-the/">Travel</a> |
       <a href="pictures.html">Pictures</a>
     </p>
-
+    <body bgcolor="#ffffee">
   </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
