--- a/resort-page/accommodation.html
+++ b/resort-page/accommodation.html
@@ -2,16 +2,16 @@
 <html>
   <title>Accommodation</title>
   <head>
-    <link href="" rel="stylesheet" type="text/css">
+    <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Super Bright</h1>
-    <img src ="https://s-media-cache-ak0.pinimg.com/736x/2e/f9/98/2ef99872c3375918428938d0b66afad1.jpg" alt="private room">
+    <center><img src ="https://s-media-cache-ak0.pinimg.com/736x/2e/f9/98/2ef99872c3375918428938d0b66afad1.jpg" alt="private room"></center>
   </head>
   </br>
   <body>
     <p>
-      <a href="accommodation.html">Acommodations</a> |
-      
+    |  <a href="index.html">Home</a>
+    |  <a href="pictures.html">Gallery</a> |
     </p>
-
+    <body bgcolor="#ffffda">
   </body>
 </html>
