--- a/resort-page/pictures.html
+++ b/resort-page/pictures.html
@@ -2,16 +2,17 @@
 <html>
   <title>Gallery</title>
   <head>
-    <link href="" rel="stylesheet" type="text/css">
-    <h1>Super Bright</h1>
-    <img src ="http://favim.com/orig/201106/02/bahamas-beach-hotel-sky-view-Favim.com-64570.jpg" alt="Gallery">
+    <link href="resort-style.css" rel="stylesheet" type="text/css">
+    <h1>Gallery</h1>
+    <center><img src ="http://favim.com/orig/201106/02/bahamas-beach-hotel-sky-view-Favim.com-64570.jpg" alt="Gallery"></center>
   </head>
   </br>
   <body>
     <p>
-      <a href="accommodation.html">Acommodations</a> |
+    | <a href="Index.html">Home</a> |
+    <a href="accommodation.html">Acommodations</a> |
 
     </p>
-
+    <body bgcolor = "#c8cecd">
   </body>
 </html>
