--- a/resort-page/accommodation.html
+++ b/resort-page/accommodation.html
@@ -3,7 +3,7 @@
   <title>Accommodation</title>
   <head>
     <link href="resort-style.css" rel="stylesheet" type="text/css">
-    <h1>Super Bright</h1>
+    <h1>Accommodation</h1>
     <center><img src ="https://s-media-cache-ak0.pinimg.com/736x/2e/f9/98/2ef99872c3375918428938d0b66afad1.jpg" alt="private room"></center>
   </head>
   </br>
