add horizontal line

--- a/resort-page/accommodation.html
+++ b/resort-page/accommodation.html
@@ -4,6 +4,7 @@
   <head>
     <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Accommodation</h1>
+    <hr size="10px" color="#ffb366">
   </head>
   </br>
   <body>
