--- a/resort-page/index.html
+++ b/resort-page/index.html
@@ -4,8 +4,8 @@
   <head>
     <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Super Bright</h1>
+    <hr size="10px" color="#ffb366">
     <p><img src ="http://cl.jroo.me/z3/Y/2/C/d/a.aaa-The-Bahamas.jpg" border="3"  alt="private resort"></p>
-
   </head>
   <br />
 
