--- a/resort-page/pictures.html
+++ b/resort-page/pictures.html
@@ -4,6 +4,7 @@
   <head>
     <link href="resort-style.css" rel="stylesheet" type="text/css">
     <h1>Gallery</h1>
+    <hr size="10px" color="#ffb366">
   </head>
   <body>
     <p>| <a href="index.html">Home</a> |</p>
